--- a/index.html
+++ b/index.html
@@ -5,16 +5,49 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">  
   <link rel="stylesheet" href="assets/css/style.css">
     
   <title>Word Guess Game</title>
 
 </head>
-<body>
-   
+<body>   
 
 
+<header>
+  <div class="header"></div>
+</header>
+
+<main class="container">
+</div>
+  <table class="game-content">
+      <thead>
+          <tr>
+              <th colspan="2"><span class="birdTitle">Bird Guess Game</span>
+                  <img id="youwin-image" src="assets/images/youwin.png" alt="Winning Image" />
+                  <img id="gameover-image" src="assets/images/gameover.png" alt="Game Over Image" />
+                  <h1 id="pressKeyTryAgain">Press Any Key!</h1>
+              </th>
+          </tr>
+      </thead>  
+      <tbody>
+          <tr>
+              <td class="clue"></td>
+              <td><h3 style="padding-bottom:5px;"><u>Press any Key to Start!</u></h3>
+                  <h4>Wins:</h4>  <div id="gameWins"></div>
+                  <h4>Current Word:</h4> <div id="currentWord"></div>
+                  <h4>Losses:</h4>  <div id="gameLosses"></div>
+                  <h4 style="padding-top:10px;">Guesses Left:</h4>  <div id="guessesLeft"></div>
+                  <h4>All Guesses:</h4>  <div id="userGuesses"></div>
+              </td>
+          </tr>
+      </tbody>      
+  </table>
+</main>    
+<footer class="footer">
+      <div class="container">
+      </div>
+</footer>
 
 
 
